# lego

./: .gitattributes  .gitignore  .sesskey  Dockerfile  README.md  SKILL.md  app.py  deploy.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  tailwind.config.js
.cursor/rules/: dtabase_docs.mdc  fasthtml.mdc  fasthtml_concise_ref.mdc  oauth_docs.mdc
.github/workflows/: deploy.yml
assets/: solv-layout-preview.html
auth/: __init__.py  app.py  cfg.py  data.py  ui.py
config-templates/: cloudflare.ini  default.conf  rclone.conf  tunnelconfig.yml
core/: __init__.py  cfg.py  logging.py  ui.py
data/cache/: cache.db
data/db/: auth.db  lego.db
examples/: chatbot.py
lego/: app.py  gun.py
lego/ai/: __init__.py  app.py  cfg.py  data.py  ui.py
lego/ai/ide/: ace.js  ui.py
lego/ai/js/: dev.js
lego/auth/: __init__.py  app.py  cfg.py  data.py  ui.py
lego/blog/: app.py  cfg.py  data.py  ui.py
lego/blog/posts/: 01-connect-order.md  01-litesearch.md  02-blog-block.md  02-kosha.md  03-connect.md  03-dockeasy.md  04-vedicreader-to-eight-packages.md  05-cfeasy.md
lego/church/: __init__.py  app.py  cfg.py  data.py  ui.py
lego/church/content/: beliefs.md
lego/church/teachings/: 00-welcome.md  01-sample-scripture-post.md
lego/core/: __init__.py  backups.py  cache.py  cfg.py  logging.py  theme.css  theme.js  themes.py  ui.py  utils.py
lego/core/css/: tailwind.input.css  theme.css
lego/core/js/: theme.js
lego/skills/: __init__.py  cfeasy.md  dockeasy.md  gheasy.md
lego/solv/: app.py  cfg.py  data.py  kernel.py  llm.py  render.py  search.py  tools.py  ui.py  varmeta.py
lego/solv/prompts/: concise.md  learning.md  standard.md
lego/solv/static/: solv.css  solv.js
static/css/: theme.css
static/solv/: .gitignore
tests/: test_var_meta_smoke.py
