[project]
name = "lego"
version = "0.1.0"
description = "Build scalable, maintainable, performant webapps one block at a time"
authors = [{ name = "Karthik Rajgopal", email = "karthik.rajgopal@hotmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "apscheduler>=3.11.2",
    "diskcache>=5.6.3",
    "email-validator>=2.3.0",
    "monsterui>=1.0.44",
    "pyjwt>=2.11.0",
    "python-fasthtml>=0.12.47",
    "rclone-python>=0.1.24",
    "rcssmin>=1.2.2",
    "resend>=2.22.0",
    "rjsmin>=1.2.5",
    "starlette-bridge>=0.3.0",
    "ujson>=5.11.0",
]

[project.urls]
Homepage = "https://github.com/Karthik777/lego"
Issues = "https://github.com/Karthik777/lego/issues"


[tool.hatch.build.targets.wheel]
packages = ["lego"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
