[project]
name = "lego"
version = "0.1.0"
description = "Build scalable, maintainable, performant webapps one block at a time"
authors = [{ name = "Karthik Rajgopal", email = "karthik.rajgopal@hotmail.com" }]
requires-python = ">=3.13"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "apscheduler>=3.11.2",
    "diskcache>=5.6.3",
    "email-validator>=2.3.0",
    "litesearch>=0.0.29",
    "fastlucide>=0.0.7",
    "mistletoe>=1.4.0",
    "pyjwt>=2.11.0",
    "python-fasthtml>=0.14.0",
    "rclone-python>=0.1.24",
    "rcssmin>=1.2.2",
    "resend>=2.22.0",
    "rjsmin>=1.2.5",
    "ujson>=5.11.0",
]

[project.scripts]
lego-skill = "setup:install_skills"
lego-setup = "setup:setup"
lego-push = "setup:push_cli"
lego-deploy = "deploy:deploy_cli"

[project.urls]
Homepage = "https://github.com/Karthik777/lego"
Issues = "https://github.com/Karthik777/lego/issues"


[tool.hatch.build.targets.wheel]
packages = ["lego"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cfeasy>=0.0.3",
    "fossick>=0.0.2",
    "gheasy>=0.0.2",
    "koshas>=0.0.16",
    "pytest>=9.0.3",
    "vpseasy>=0.0.6",
]
